--- a/front/pages/system/user-edit.html
+++ b/front/pages/system/user-edit.html
@@ -19,13 +19,13 @@
 	  <div class="layui-form-item">
 			  <label class="layui-form-label">密码</label>
 			  <div class="layui-input-block">
-			  	<input type="password" name="password" placeholder="请输入密码" autocomplete="off" class="layui-input" lay-verify="password|required" lay-verType="tips">
+			  	<input type="password" name="password" placeholder="请输入密码" autocomplete="off" class="layui-input" lay-verify="password" lay-verType="tips">
 			  </div>
 		</div>
 	  <div class="layui-form-item">
 			  <label class="layui-form-label">确认密码</label>
 			  <div class="layui-input-block">
-			  	<input type="password" name="password2" placeholder="请再次输入密码" autocomplete="off" class="layui-input" lay-verify="password2|required" lay-verType="tips">
+			  	<input type="password" name="password2" placeholder="请再次输入密码" autocomplete="off" class="layui-input" lay-verify="password2" lay-verType="tips">
 			  </div>
 		</div>
 	  <div class="layui-form-item">
