--- a/front/pages/gm/copy.html
+++ b/front/pages/gm/copy.html
@@ -70,11 +70,12 @@
   <script src="/lib/layui/layui.js"></script>
   <script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
   <script>
-    layui.use(['okUtils', 'form'], function () {
+    layui.use(['okUtils', 'form', 'okLayer'], function () {
       let okUtils = layui.okUtils;
       let $ = layui.jquery;
       let xmSelect = layui.xmSelect;
       let form = layui.form;
+      let okLayer = layui.okLayer;
       okLoading.close();
 
       let zoneSelect = xmSelect.render({
@@ -87,9 +88,7 @@
         tips: '请选择一个服务器',
         layVerify: 'required',
         layVerType: 'tips',
-        toolbar: {
-          show: true,
-        },
+        radio: true,
       });
 
       function updateZone (server) {
@@ -101,10 +100,10 @@
           zoneSelect.update({
             data: [
               { sZoneName: '挂机服务器', children: response.data["game"] },
-              { sZoneName: 'slg服务器', children: response.data["map"] },
             ],
           });
         }).fail(function (error) {
+          zoneSelect.update({data:[]});
           console.log(error);
         });
       }
@@ -119,9 +118,6 @@
         tips: '请选择区域',
         layVerify: 'required',
         layVerType: 'tips',
-        toolbar: {
-          show: true,
-        },
         radio: true,
         on: function(data) {
           var arr = data.arr;
@@ -140,6 +136,7 @@
           data: response.data,
         });
       }).fail(function (error) {
+        serverSelect.update({data:[]});
         console.log(error);
       });
 
@@ -153,17 +150,14 @@
         tips: '请选择一个服务器',
         layVerify: 'required',
         layVerType: 'tips',
-        toolbar: {
-          show: true,
-        },
+        radio: true,
       });
 
       // 选择一个内网的服务器作为目标
-      okUtils.ajax("/api/gm/zone/simplelist", "get", { game: true, gf: true, map: true }, false).done(function (response) {
+      okUtils.ajax("/api/gm/zone/simplelist", "get", { game: true, gf: true }, false).done(function (response) {
         zoneSelect2.update({
           data: [
             { sZoneName: '挂机服务器', children: response.data["game"] },
-            { sZoneName: 'slg服务器', children: response.data["map"] },
           ],
           initValue: [1],
         });
@@ -179,11 +173,11 @@
         let tar_role = $("#tarRole").val();
         // 从选中的服务器获取数据
         let role_data;
-        okUtils.ajax("/api/public/gm/dump_role", "get", { server: server, zone: src_zone, role: src_role }, false).done(function (response) {
+        okUtils.ajax("/api/public/gm/dump_role", "get", { server: server, zone: src_zone, role: src_role }, true).done(function (response) {
           role_data = response.data;
           // copy到选中的内网服务器
-          okUtils.ajax("/api/public/gm/load_role", "post", { zone: tar_zone, role: tar_role, data: role_data }, false).done(function (response) {
-            console.log("ok");
+          okUtils.ajax("/api/public/gm/load_role", "post", { zone: tar_zone, role: tar_role, data: role_data }, true).done(function (response) {
+            okLayer.greenTickMsg("拷贝数据成功");
           }).fail(function (error) {
             console.log("failed", error);
           });
