--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -27,15 +27,22 @@
       <div class="layui-form-item">
         <label class="layui-form-label">内容</label>
         <div class="layui-input-block">
-          <div id="rContnet"></div>
-        </div>
-      </div>
-
-      <div class="layui-form-item">
-        <label class="layui-form-label">内容2</label>
-        <div class="layui-input-block">
-          <textarea name="sContent" placeholder="请编辑内容" class="layui-textarea" lay-verify="required"
-                    lay-verType="tips"></textarea>
+          <div class="layui-tab layui-tab-brief">
+            <ul class="layui-tab-title">
+              <li class="layui-this">简体中文(默认)</li>
+              <li>英语</li>
+            </ul>
+            <div class="layui-tab-content">
+              <div class="layui-tab-item layui-show">
+                  <div id="zh-CN"></div>
+                  <textarea id="zh-CNHtml" placeholder="请编辑内容" class="layui-textarea"></textarea>
+              </div>
+              <div class="layui-tab-item">
+                  <div id="en"></div>
+                  <textarea id="enHtml" placeholder="请编辑内容" class="layui-textarea"></textarea>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -81,16 +88,6 @@
       </div>
 
       <div class="layui-form-item">
-        <label class="layui-form-label">类型</label>
-        <div class="layui-input-block">
-          <select name="iType">
-            <option value="0" selected>默认</option>
-            <option value="1">爱贝勇士</option>
-          </select>
-        </div>
-      </div>
-
-      <div class="layui-form-item">
         <div class="layui-input-block">
           <button class="layui-btn" lay-submit lay-filter="add">添加</button>
         </div>
@@ -100,14 +97,16 @@
   </div>
   <script src="/lib/layui/layui.js"></script>
   <script>
-    const editor = getDefaultEditor('#rContnet');
+    zhCNeditor = getDefaultEditor('#zh-CN');
+    ENeditor = getDefaultEditor('#en');
 
-    layui.use(['form', 'laydate', 'okLayer', 'okUtils'], function () {
+    layui.use(['form', 'laydate', 'okLayer', 'okUtils', 'element'], function () {
       let form = layui.form;
       let okUtils = layui.okUtils;
       let okLayer = layui.okLayer;
       let laydate = layui.laydate;
       let $ = layui.jquery;
+      let element = layui.element;
 
       laydate.render({
         elem: "#iBeginTime", type: "datetime"
@@ -119,11 +118,16 @@
         elem:"#iPopWindowEndTime", type:"datetime"
       });
 
+      zhCNeditor.config.onchange = function (newHtml) {
+        let jsonData = zhCNeditor.txt.getJSON();
+        let ouputStr = ExecuteJsonData(jsonData);
+        $(zhCNeditor.toolbarSelector+"Html").val(ouputStr);
+      }
 
-      editor.config.onchange = function (newHtml) {
-           let jsonData = editor.txt.getJSON();
-           let ouputStr = ExecuteJsonData(jsonData);
-           $("textarea[name='sContent']").val(ouputStr);
+      ENeditor.config.onchange = function (newHtml) {
+        let jsonData = ENeditor.txt.getJSON();
+        let ouputStr = ExecuteJsonData(jsonData);
+        $(ENeditor.toolbarSelector+"Html").val(ouputStr);
       }
 
       form.on('select(type)', function(data){
@@ -137,7 +141,6 @@
 
       //监听提交
       form.on('submit(add)', function (data) {
-
         if (data.field.sBeginTime >= data.field.sEndTime) {
           okLayer.redCrossMsg('开始时间不能大于结束时间', function () {});
           return false;
@@ -153,7 +156,11 @@
           return false;
         }
 
-        data.field.sHtmlContent = editor.txt.html();
+        data.field.sContent = $('#zh-CNHtml').val();
+        data.field.sHtmlContent = zhCNeditor.txt.html();
+        let lang = {};
+        lang["en"] = {"sContent":$('#enHtml').val(),"sHtmlContent":ENeditor.txt.html()};
+        data.field.sLangContent = okUtils.jsonToString(lang);
 
         okUtils.ajax("/api/gm/bulletin/add", "post", data.field, true).done(function (response) {
           okLayer.greenTickMsg(response.data, function () {
