--- a/front/pages/gm/mail.html
+++ b/front/pages/gm/mail.html
@@ -46,16 +46,18 @@
           }},
           { field: "vItems", title: "发送道具", templet: function (d) {
               let result = ""
-              if(d.iCoin > 0){
+              if (d.iCoin > 0){
                  result += "金币:" + d.iCoin + "\n";
               }
-              if(d.iDiamond > 0){
+              if (d.iDiamond > 0){
                 result += "钻石:" + d.iDiamond + "\n";
               }
-              d.vItems.forEach((item,index,array)=>{
-                result += "道具ID:"+item.iId;
-                result += ",数量:"+item.iNum + "\n";
-              })
+              if (d.vItems) {
+                d.vItems.forEach((item,index,array)=>{
+                  result += "道具ID:"+item.iId;
+                  result += ",数量:"+item.iNum + "\n";
+                })
+              }
               return  result;
           }},
           { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
