--- a/front/pages/gm/bulletin-edit.html
+++ b/front/pages/gm/bulletin-edit.html
@@ -42,8 +42,7 @@
             <div class="layui-form-item">
               <label class="layui-form-label">标题</label>
               <div class="layui-input-block">
-                <input type="text" id="enTitle" placeholder="请输入标题" autocomplete="off" class="layui-input"
-                  lay-verify="required" lay-verType="tips">
+                <input type="text" id="enTitle" placeholder="请输入标题" autocomplete="off" class="layui-input" lay-verType="tips">
               </div>
             </div>
             <div class="layui-form-item">
